[package]
name = "display_with_options"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE.md"
keywords = ["display", "debug", "indent", "indentation"]
categories = ["development-tools"]
workspace = "src"
publish = ["crates.io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
