[package]
name = "display_with_options"
description = "Display and Debug with options passed around. Indentation functionality."
version = "0.1.2"
edition = "2021"
license = "MIT"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["display", "debug", "indent", "indentation", "pretty"]
categories = ["development-tools"]
repository = "https://github.com/Ivorforce/display-with-options"
authors = ["Lukas Tenbrink <lukas.tenbrink@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
